# gokbilge-tts

./: .gitignore  CLAUDE.md  FINDINGS.md  README.md  TRAINING_LOG.md  pyproject.toml
benchmarks/: BENCHMARK_PLAN.md  SCORING_RUBRIC.md  turkish_eval_sentences.txt
configs/: piper_tr_v0_1.json  vits_tr_v0_1.yaml
docs/: ARCHITECTURE.md  DATASETS.md  DATASET_CLEANING_V0_2.md  LICENSE_STRATEGY.md  MODEL_RELEASE.md  PIPER_TRAINING.md  ROADMAP.md  SMOKE_RUN_REPORT.md  TEXT_NORMALIZATION.md  TURKISH_G2P.md  V0_2_BALANCED_NEGATIVE_CLOSURE.md  V0_2_BALANCED_PILOT_PLAN.md  V0_3_RELAXED_NEGATIVE_CLOSURE.md  V0_3_TURKISH_HEAVY_PLAN.md  V0_4_INTERIM_STATUS_REPORT.md  V0_4_STEP500K_FINETUNE_TURKISH_HEAVY_PLAN.md  V0_5_XTTS_V2_BENCHMARK_PLAN.md
eval_sets/: v0_3_turkish_heavy_sentences.txt
recipes/issai_piper/: README.md  export_onnx.sh  infer.sh  prepare.sh  smoke.sh  train.sh  train_v0_2_balanced.sh  train_v0_3_turkish_heavy_relaxed.sh  train_v0_4_step500k_finetune_turkish_heavy.sh
samples/: README.md
tests/: test_audit_turkish_heavy_terms.py  test_build_v0_3_turkish_heavy_manifest.py  test_build_v0_4_finetune_manifest.py  test_cli.py  test_dataset_cleaning.py  test_export_piper.py  test_g2p.py  test_normalize.py  test_prepare.py
tools/: asr_manifest_check.py  audit_dataset.py  audit_turkish_heavy_terms.py  auto_eval.sh  build_clean_manifest.py  build_v0_3_turkish_heavy_manifest.py  build_v0_4_finetune_manifest.py  check_config.py  eval_step.sh  filter_manifest.py  patch_export_onnx.py  patch_export_onnx2.py  patch_export_onnx3.py  patch_lightning.py  patch_norm_audio_cache.py  patch_piper_checkpoint_load.py  piper_infer.py  piper_main_patch.py  piper_phonemize_stub.py  synth.py  synth_smoke_samples.py  synth_test.py  test_piper_train.py  test_stub.py  xtts_v2_benchmark.py
(+27 files in other folders)
