[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gokbilge-tts"
version = "0.1.0.dev0"
description = "Gokbilge TTS — Open Turkish Text-to-Speech Toolkit"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Fatih Küçükpetek" }
]
keywords = ["tts", "text-to-speech", "turkish", "vits", "piper", "nlp", "speech"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "soundfile>=0.12",
  "librosa>=0.10",
  "torch>=2.0",
  "torchaudio>=2.0",
  "pydantic>=2.0",
  "typer>=0.9",
  "rich>=13.0",
  "tqdm>=4.65",
  "datasets>=2.14",
  "huggingface_hub>=0.20",
]

[project.optional-dependencies]
phonemizer = [
  "phonemizer>=3.2",
]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "ruff",
  "mypy",
]

[project.scripts]
gokbilge-tts = "gokbilge_tts.cli:main"

[project.urls]
Homepage = "https://github.com/gokbilge/gokbilge-tts"
Repository = "https://github.com/gokbilge/gokbilge-tts"
"Hugging Face" = "https://huggingface.co/gokbilge-tts"
Issues = "https://github.com/gokbilge/gokbilge-tts/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gokbilge_tts"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
